Adapted for 1080 display with 32 columns.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -176,8 +176,28 @@
     .span9     { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 9); }
     .span10    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 10); }
     .span11    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 11); }
-    .span12,
-    .container { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 12); }
+    .span12    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 12); }
+    .span13    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 13); }
+    .span14    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 14); }
+    .span15    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 15); }
+    .span16    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 16); }
+    .span17    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 17); }
+    .span18    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 18); }
+    .span19    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 19); }
+    .span20    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 20); }
+    .span21    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 21); }
+    .span22    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 22); }
+    .span23    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 23); }
+    .span24    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 24); }
+    .span25    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 25); }
+    .span26    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 26); }
+    .span27    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 27); }
+    .span28    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 28); }
+    .span29    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 29); }
+    .span30    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 30); }
+    .span31    { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 31); }
+    .span32,
+    .container { #gridSystem > .columns(@gridGutterWidth, @gridColumnWidth, @gridRowWidth, 32); }
     // Offset column options
     .offset1   { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 1); }
     .offset2   { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 2); }
@@ -190,6 +210,26 @@
     .offset9   { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 9); }
     .offset10  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 10); }
     .offset11  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 11); }
+    .offset12  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 12); }
+    .offset13  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 13); }
+    .offset14  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 14); }
+    .offset15  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 15); }
+    .offset16  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 16); }
+    .offset17  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 17); }
+    .offset18  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 18); }
+    .offset19  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 19); }
+    .offset20  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 20); }
+    .offset21  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 21); }
+    .offset22  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 22); }
+    .offset23  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 23); }
+    .offset24  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 24); }
+    .offset25  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 25); }
+    .offset26  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 26); }
+    .offset27  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 27); }
+    .offset28  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 28); }
+    .offset29  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 29); }
+    .offset30  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 30); }
+    .offset31  { #gridSystem > .offset(@gridColumnWidth, @gridGutterWidth, 31); }
   }
 }
 
